# coflux

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.agents/skills/raven-use/: SKILL.md
.claude/skills/: raven-use
.github/workflows/: ci.yml  npm-publish.yml  release.yml
apps/daemon/: package.json
apps/daemon/src/: config.ts  creds.ts  exec.ts  fs.ts  git.ts  index.ts  ipc.ts  sessions.ts  worker.ts
apps/mobile/: index.html  package.json  vite.config.ts
apps/mobile/public/: manifest.webmanifest
apps/mobile/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
apps/server/: package.json
apps/server/src/: app.ts  auth.ts  auto-update.ts  config.ts  hub.ts  index.ts  mirror.ts  pending.ts  proxy.ts  secrets.ts  store.ts  transport.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/.claude/: CLAUDE.md
apps/web/public/: manifest.webmanifest
apps/web/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
crates/protocol/: Cargo.toml
crates/supervisor/: Cargo.toml  build.rs  release-pubkey.hex
crates/supervisor/src/: fda.rs  main.rs  manager.rs  sessions.rs  upgrade.rs
crates/worker/: Cargo.toml
crates/worker/src/: conn_state.rs  creds.rs  dec_modes.rs  git.rs  main.rs  ops.rs  ports.rs  tunnel.rs
deploy/: README.md  install.sh
docs/: OPEN_QUESTIONS.md  RELEASING.md  ROADMAP.md  architecture.md  auth-design.md  hot-upgrade-design.md
plans/: 001-multi-account-supabase-auth.md  002-postgres-storage.md  003-device-authorization-enroll.md  004-port-forward-protocol.md  005-port-forward-daemon.md  006-port-forward-server-web.md  007-port-forward-integration.md  008-web-workspace-tabs-revamp.md  009-protobuf-idl-wire-migration.md  010-web-rewrite-solidjs.md  011-web-react19-compiler-migration.md  012-import-project-wizard.md  013-web-xterm6-upgrade.md  014-terminal-image-paste.md  015-auto-update-orchestration.md  015-web-hotkeys.md  016-terminal-refit-on-metric-drift.md  017-auto-update-orchestration.md  018-device-rename.md  019-terminal-tab-port-hovercard.md  020-project-name-from-git-remote.md  021-resizable-sidebar.md  022-pwa-installable.md  023-terminal-file-drag-upload.md  024-passive-attach-containment.md  024-workspace-diff-stats.md  025-passive-attach-containment.md  025-workspace-changes-diff-view.md  026-macos-fda-guide.md  026-passive-attach-containment.md  026-sidebar-diff-hover-mask.md  027-sidebar-diff-hover-mask.md  028-macos-fda-guide.md  029-import-wizard-hide-dotfolders.md  030-mobile-responsive-web.md  031-extract-client-package.md  032-mobile-companion-app.md  033-build-version-skew-kick.md  033-worker-connection-resilience.md  034-remove-enroll-key.md  (+2 more)
proto/: buf.gen.yaml
scripts/: fix-pty-perms.mjs  gen-keypair.mjs  prod-smoke.mjs  release-sign.mjs
tests/: package.json
tests/src/: authorize.test.mjs  auto-update.test.mjs  build-version.test.mjs  conn-state.test.mjs  contract.test.mjs  dec-modes-replay.test.mjs  device-rename.test.mjs  fs-device.test.mjs  handoff.test.mjs  harness.mjs  http-api.test.mjs  lifecycle.test.mjs  offline-view.test.mjs  ops.test.mjs  proxy.test.mjs  reconnect.test.mjs  security.test.mjs  signed-upgrade.test.mjs  supabase.test.mjs  watchdog.test.mjs  worker-restart.test.mjs  worker-upgrade.test.mjs  workspace-diff.test.mjs
(+65 files in other folders)
