[package]
name = "coflux-worker"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "coflux-worker"
path = "src/main.rs"

[dependencies]
coflux-protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "time", "sync", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
